<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="5dp"
    android:layout_marginEnd="10dp"
    android:layout_marginRight="10dp"
    app:cardBackgroundColor="@color/colorPink"
    app:cardCornerRadius="5dp"
    app:cardElevation="5dp"
    app:cardMaxElevation="5dp"
    app:contentPadding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:id="@+id/history_pac"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:padding="2dp"
                android:text="@string/history_pac_bn"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/history_pac_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/history_pac_bn"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"
                android:textStyle="normal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:id="@+id/history_start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingTop="2dp"
                android:text="@string/history_start_bn"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/history_start_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/history_start_bn"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"
                android:textStyle="normal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:id="@+id/history_end"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:padding="2dp"
                android:text="@string/history_end_bn"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/history_end_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/history_end_bn"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"
                android:textStyle="normal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:id="@+id/history_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:padding="2dp"
                android:text="@string/service_status_bn"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/history_status_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/service_status_bn"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"
                android:textStyle="normal" />
        </LinearLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>